// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductLineItem /> Rendering should render the product details 1`] = `
<div
  className="row align-items-center mb-3"
>
  <div
    className="col-5"
  >
    <div
      className="embed-responsive embed-responsive-16by9"
    >
      <img
        alt=""
        className="img-thumbnail product-thumbnail"
        src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
      />
    </div>
  </div>
  <div
    className="col-7"
  >
    <h6
      aria-level="3"
      className="m-0"
    >
      Introduction to Happiness
    </h6>
    <p
      className="m-0"
    >
      Verified Certificate
    </p>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for audit certificate 1`] = `
<div
  className="row align-items-center mb-3"
>
  <div
    className="col-5"
  >
    <div
      className="embed-responsive embed-responsive-16by9"
    >
      <img
        alt=""
        className="img-thumbnail product-thumbnail"
        src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
      />
    </div>
  </div>
  <div
    className="col-7"
  >
    <h6
      aria-level="3"
      className="m-0"
    >
      Introduction to Happiness
    </h6>
    <p
      className="m-0"
    />
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for honor certificate 1`] = `
<div
  className="row align-items-center mb-3"
>
  <div
    className="col-5"
  >
    <div
      className="embed-responsive embed-responsive-16by9"
    >
      <img
        alt=""
        className="img-thumbnail product-thumbnail"
        src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
      />
    </div>
  </div>
  <div
    className="col-7"
  >
    <h6
      aria-level="3"
      className="m-0"
    >
      Introduction to Happiness
    </h6>
    <p
      className="m-0"
    />
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for no-id-professional certificate 1`] = `
<div
  className="row align-items-center mb-3"
>
  <div
    className="col-5"
  >
    <div
      className="embed-responsive embed-responsive-16by9"
    >
      <img
        alt=""
        className="img-thumbnail product-thumbnail"
        src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
      />
    </div>
  </div>
  <div
    className="col-7"
  >
    <h6
      aria-level="3"
      className="m-0"
    >
      Introduction to Happiness
    </h6>
    <p
      className="m-0"
    >
      Professional Certificate
    </p>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for professional certificate 1`] = `
<div
  className="row align-items-center mb-3"
>
  <div
    className="col-5"
  >
    <div
      className="embed-responsive embed-responsive-16by9"
    >
      <img
        alt=""
        className="img-thumbnail product-thumbnail"
        src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
      />
    </div>
  </div>
  <div
    className="col-7"
  >
    <h6
      aria-level="3"
      className="m-0"
    >
      Introduction to Happiness
    </h6>
    <p
      className="m-0"
    >
      Professional Certificate
    </p>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for unknown seat type 1`] = `
<div
  className="row align-items-center mb-3"
>
  <div
    className="col-5"
  >
    <div
      className="embed-responsive embed-responsive-16by9"
    >
      <img
        alt=""
        className="img-thumbnail product-thumbnail"
        src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
      />
    </div>
  </div>
  <div
    className="col-7"
  >
    <h6
      aria-level="3"
      className="m-0"
    >
      Introduction to Happiness
    </h6>
    <p
      className="m-0"
    />
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for verified certificate 1`] = `
<div
  className="row align-items-center mb-3"
>
  <div
    className="col-5"
  >
    <div
      className="embed-responsive embed-responsive-16by9"
    >
      <img
        alt=""
        className="img-thumbnail product-thumbnail"
        src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
      />
    </div>
  </div>
  <div
    className="col-7"
  >
    <h6
      aria-level="3"
      className="m-0"
    >
      Introduction to Happiness
    </h6>
    <p
      className="m-0"
    >
      Verified Certificate
    </p>
  </div>
</div>
`;
